# Video_Dariy

./: .dockerignore  .env.example  .gitignore  API.md  ARCHITECTURE.en.md  ARCHITECTURE.md  Dockerfile  README.en.md  README.md  alembic.ini  docker-compose.release.yml  docker-compose.yml  mcp_quickstart.en.md  mcp_quickstart.md  mypy.ini  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: ci.yml  release.yml
.opencode/: oh-my-openagent.json
alembic/: env.py
alembic/versions/: 20260320_0001_postgresql_baseline.py  20260321_0002_closure_cleanup.py  20260324_0003_provider_delete_compat.py  20260330_0004_add_supports_tool_calling.py  20260402_0005_add_missing_indexes.py  20260402_0006_add_image_path_to_home_entity_profile.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
scripts/: clean_all.sh  package_release.sh  test_provider_video_response.py
src/: main.py  reset_pipeline_data.py
src/adapters/: xiaomi_parser.py
src/api/: common.py  deps.py
src/application/: bootstrap.py
src/core/: celery_app.py  config.py  security.py
src/db/: base.py  base_class.py  init_db.py  session.py
src/mcp/: __init__.py  auth.py  server.py  tools.py
src/models/: __init__.py  admin_user.py  app_runtime_state.py  chat_query_log.py  daily_summary.py  event_record.py  event_tag_rel.py  home_entity_profile.py  home_profile.py  llm_provider.py  llm_usage_log.py  mcp_call_log.py  system_config.py  tag_definition.py  task_log.py  video_file.py  video_session.py  video_session_file_rel.py  (+3 more)
(+256 files in other folders)
