[project]
name = "home_monitor"
version = "0.1.0"
description = "Home Monitor Video Intelligent Analysis System"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "sqlalchemy>=2.0.29",
    "alembic>=1.13.1",
    "pydantic>=2.6.4",
    "pydantic-settings>=2.2.1",
    "psycopg[binary]>=3.2.6",
    "celery>=5.3.6",
    "redis>=5.0.3",
    "httpx>=0.27.0",
    "loguru>=0.7.2",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.6",
    "ruff>=0.3.4",
    "mypy>=1.9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: 需要真实外部依赖（如 LLM）的集成测试",
]
